--- a/src/app/ministere/ministere.page.scss
+++ b/src/app/ministere/ministere.page.scss
@@ -90,3 +90,12 @@ ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrate
   margin-left: 10%;
   margin-right: 10%;
 }
+
+.noir {
+  
+  color: black;
+}
+
+.bleu {
+  color: blue;
+}
