--- a/src/app/commentaire/commentaire.page.html
+++ b/src/app/commentaire/commentaire.page.html
@@ -36,6 +36,7 @@
             <div class="mm">
               <ion-label>
                 <h3>{{comment.user.username}}</h3>
+                <p>{{comment.date | date: 'dd/MM/yyyy HH:mm:ss'}}</p>
               </ion-label>
             </div>
             <div>
@@ -54,7 +55,7 @@
                     <button
                       class="dropdown-item"
                       data-bs-toggle="modal"
-                      data-bs-target="#exampleModal"
+                      data-bs-target="#exampleModal1"
                       (click)="lirecomment(comment.id_commentaire)"
                     >
                       Modifier
@@ -100,7 +101,7 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="exampleModal"
+  id="exampleModal1"
   tabindex="1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
