--- a/src/app/vocal/vocal.page.scss
+++ b/src/app/vocal/vocal.page.scss
@@ -8,7 +8,7 @@ ion-avatar {
   width: 45px;
 }
 h3 {
-  font-weight: 700;
+  // font-weight: 700;
   font-size: 15px;
   margin-top: 10px;
   margin-left: 7px;
@@ -25,7 +25,7 @@ audio{
   width: 240px;
   height: 70%;
  // margin-top: 0px;
-  margin: auto;
+  margin-left: 10%;
   // display: flex;
  // justify-content: center;
   align-items: center;
@@ -37,4 +37,12 @@ audio{
 .imgae {
   width: 40px !important;
   height: 40px;
+  margin-left: 10%;
+  margin-top: 5%;
 }
+
+.mm{
+  margin-left: 5%;
+  margin-top: -3%;
+}
+
