--- a/src/app/ministere/ministere.page.html
+++ b/src/app/ministere/ministere.page.html
@@ -108,7 +108,7 @@
                   style="cursor: pointer"
                   ><i class="bi bi-hand-thumbs-up-fill iconComment"></i
                 ></a>
-                <div class="textComment"> J'aime
+                <div class="textComment">{{ide.likes}} J'aime
            
                 </div>
               </button>
