--- a/src/app/password-update/password-update.page.html
+++ b/src/app/password-update/password-update.page.html
@@ -26,9 +26,12 @@
       <div class="mm" style="margin-top: 15%">
         <div class="inputWithIcon">
           <label>Mot de passe actuel</label>
+          <div class="form-control" style="display: flex;">
 
           <input
-            class="form-control in"
+          style="border: none !important;"
+                [type]="type ? 'password' : 'text'"
+           
             name="currentpassword"
             type="password"
             placeholder="Ancien mot de passe"
@@ -39,10 +42,16 @@
           />
           <i class="bi bi-shield-lock"></i>
 
+          <ion-icon [name]="type ? 'eye-off' : 'eye'" slot="end" color="dark" (click)="changeType()" style="font-family: 'Poppins';
+          font-style: normal; opacity: 0.5; margin-top: 2%; margin-left: 2%;"></ion-icon>
+          </div>
           <div class="inputWithIcon">
             <label>Nouveau mot de passe</label>
+            <div class="form-control" style="display: flex;">
             <input
-              class="form-control in"
+            style="border: none !important;"
+            [type]="type ? 'password' : 'text'"
+       
               name="newpassword"
               type="password"
               placeholder="Nouveau mot de passe"
@@ -52,12 +61,19 @@
               ngModel
             />
             <i class="bi bi-key"></i>
+            
+          <ion-icon [name]="type ? 'eye-off' : 'eye'" slot="end" color="dark" (click)="changeType()" style="font-family: 'Poppins';
+          font-style: normal; opacity: 0.5; margin-top: 2%; margin-left: 2%;"></ion-icon>
           </div>
+        </div>
 
           <div class="inputWithIcon">
             <label>Confirmer Nouveau mot de passe</label>
+            <div class="form-control" style="display: flex;">
             <input
-              class="form-control in"
+            style="border: none !important;"
+            [type]="type ? 'password' : 'text'"
+           
               name="confirmpassword"
               type="password"
               placeholder="Retaper le nouveau mot de passe"
@@ -67,6 +83,10 @@
               ngModel
             />
             <i class="bi bi-key"></i>
+            
+          <ion-icon [name]="type ? 'eye-off' : 'eye'" slot="end" color="dark" (click)="changeType()" style="font-family: 'Poppins';
+          font-style: normal; opacity: 0.5; margin-top: 2%; margin-left: 2%;"></ion-icon>
+            </div>
           </div>
         </div>
       </div>
@@ -80,11 +100,11 @@
           Mettre à jour le mot de passe
         </ion-button>
       </div>
-      <p class="ins" style="text-align: center; margin-top: 2%">
+      <!-- <p class="ins" style="text-align: center; margin-top: 2%">
         <span style="color: #ffff">
-          <a routerLink="/password-forget">Mot de Passe oublié ?</a>
+          <a routerLink="/resetpassword">Mot de Passe oublié ?</a>
         </span>
-      </p>
+      </p> -->
     </form>
   </div>
 </ion-content>
