--- a/src/app/password-update/password-update.page.scss
+++ b/src/app/password-update/password-update.page.scss
@@ -10,13 +10,8 @@ input[type="password"] {
   margin-left: 1%;
 }
 
-input[type="password"]:focus {
-  border-color: dodgerblue;
-  box-shadow: 0 0 8px 0 dodgerblue;
-}
-
 .inputWithIcon input[type="password"] {
-  padding-left: 40px;
+  padding-left: 15px;
 }
 
 .inputWithIcon {
@@ -26,12 +21,13 @@ input[type="password"]:focus {
 .inputWithIcon i {
   position: absolute;
   left: 0;
-  top: 31px;
+  top: 26px;
   padding: 9px 8px;
   color: #aaa;
   transition: 0.3s;
 }
 
-.inputWithIcon input[type="password"]:focus + i {
-  color: dodgerblue;
+
+input{
+  outline: none;
 }
